--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,7 +6,10 @@ server.port=8080
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
 #app.eureka-server=localhost
+
+
 
 ## Logging (utile pour debug)
 logging.level.root=INFO
@@ -38,3 +41,9 @@ spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
 
 ## JWT / Keycloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
+
+
+# ZIPKIN CONFIG
+management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
