--- a/discovery-server-service/src/main/resources/application.properties
+++ b/discovery-server-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=discovery-server-service
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.prefer-ip-address=true
 server.port=8761
 
 
@@ -9,3 +10,9 @@ eureka.username=${EUREKA_USERNAME}
 eureka.password=${EUREKA_PASSWORD}
 #eureka.username=${EUREKA_USERNAME:eureka}
 #eureka.password=${EUREKA_PASSWORD:123456}
+
+
+# ZIPKIN CONFIG
+management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
