--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -33,4 +33,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ===============================
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
-#eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=true
+
+
+# ZIPKIN CONFIG
+management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
