--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -30,6 +30,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ? Configuration du Client Eureka
 # ===============================
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
 
 # ===============================
@@ -51,17 +52,23 @@ resilience4j.circuitbreaker.configs.default.permitted-number-of-calls-in-half-op
 resilience4j.circuitbreaker.configs.default.failure-rate-threshold=50
 resilience4j.circuitbreaker.configs.default.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.configs.default.automatic-transition-from-open-to-half-open-enabled=true
-
-#resilience4j.retry.configs.default.max-attempts=3
-#resilience4j.retry.configs.default.wait-duration=2s
-#resilience4j.retry.configs.default.enable-exponential-backoff=true
-#
+#retry
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=5s
+resilience4j.retry.configs.default.enable-exponential-backoff=true
+#ratelimiter
 #resilience4j.ratelimiter.configs.default.limit-for-period=10
 #resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
-#resilience4j.ratelimiter.configs.default.timeout-duration=2s
-#
+resilience4j.ratelimiter.configs.default.timeout-duration=10s
+#bulkhead
 #resilience4j.bulkhead.configs.default.max-concurrent-calls=10
 #resilience4j.bulkhead.configs.default.max-wait-duration=5s
-#
-#resilience4j.timelimiter.configs.default.timeout-duration=3s
+#timelimiter
+resilience4j.timelimiter.configs.default.timeout-duration=3s
 #resilience4j.timelimiter.configs.default.cancel-running-future=true
+
+
+# ZIPKIN CONFIG
+management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
