--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -21,4 +21,19 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 # ? Configuration du Client Eureka
 # ===============================
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://eureka:123456@localhost:8761/eureka/
+
+# ZIPKIN CONFIG
+#management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# Activer la collecte des traces (Spring Cloud Sleuth intégré à Micrometer Tracing)
+management.tracing.sampling.probability=1.0
+
+# URL de Zipkin (si tu exécutes localement)
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+# Activer l?export des traces
+management.tracing.export.zipkin.enabled=true
