--- a/pom.xml
+++ b/pom.xml
@@ -46,16 +46,6 @@
         </dependencies>
     </dependencyManagement>
 
-<!--    <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>-->
-
-
     <build>
         <plugins>
             <!-- Plugin Maven Compiler -->
@@ -72,6 +62,25 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.3</version> <!-- Use the latest version -->
+                <configuration>
+                    <from>
+<!--                        <image>eclipse-temurin:17-jre</image>-->
+                        <image>eclipse-temurin:17-jre@sha256:db1c787e2cd41943a90b025191e4e66cbecfc0695e4ff619353eef92e460378f</image>
+                    </from>
+                    <to>
+                        <image>frankgue/${project.artifactId}:latest</image>
+                        <auth>
+                            <username>${env.DOCKER_USERNAME}</username>
+                            <password>${env.DOCKER_PASSWORD}</password>
+                        </auth>
+                    </to>
+
+                </configuration>
             </plugin>
         </plugins>
 
